# DatabaseAdapter

./: .gitmodules  CMakeLists.txt
imp/SqliteAdapter/: CMakeLists.txt
imp/SqliteAdapter/include/SqliteAdapter/: sqlitetransaction.h  sqlliteadapter_global.h
imp/SqliteAdapter/lib/sqlite-amalgamation/: CMakeLists.txt
impl/SqliteAdapter/: CMakeLists.txt
impl/SqliteAdapter/include/SqliteAdapter/: sqlitedatabaseadapter.h  sqlitetransaction.h  transactiontype.h
impl/SqliteAdapter/include/SqliteAdapter/helpers/: sqliteexechelper.h
impl/SqliteAdapter/src/SqliteAdapter/: sqlitedatabaseadapter.cpp  sqlitetransaction.cpp
include/DatabaseAdapter/: connection.h  connectionpool.h  databaseadapter.h  idatabasedriver.h  itransaction.h  opendatabaseexception.h  sqlexception.h
include/DatabaseAdapter/model/: databasesettings.h  query_result.h  queryresult.h
lib/DatabaseAdapter/: CMakeLists.txt
lib/DatabaseAdapter/include/DatabaseAdapter/: databaseadapter.h  databaseadapter_global.h  idatabasedriver.h  itransaction.h  opendatabaseexception.h  sqlexception.h
lib/DatabaseAdapter/include/DatabaseAdapter/model/: databasesettings.h  queryresult.h
lib/DatabaseAdapter/src/: idatabasedriver.cpp  itransaction.cpp  opendatabaseexception.cpp
lib/DatabaseAdapter/src/model/: queryresult.cpp
lib/DataseAdapter/include/DatabaseAdapter/: idatabasedriver.h
lib/DataseAdapter/include/DatabaseAdapter/model/: databasesettings.h
src/: connection.cpp  idatabasedriver.cpp  itransaction.cpp  opendatabaseexception.cpp  sqlexception.cpp
src/model/: query_result.cpp
